[gd_scene load_steps=2 format=3 uid="uid://cnmis75qtv8vm"]

[ext_resource type="Script" uid="uid://dvf8k71chkex5" path="res://Menu/MainMenu.gd" id="1_e1xpn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e1xpn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -16.0
offset_right = 4.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="JoinWindow" type="Window" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Enter IP address:"
initial_position = 1
size = Vector2i(300, 100)
visible = false

[node name="MarginContainer" type="MarginContainer" parent="JoinWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="JoinWindow/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="IPLineEdit" type="LineEdit" parent="JoinWindow/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "0.0.0.0"

[node name="HBoxContainer" type="HBoxContainer" parent="JoinWindow/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Cancel" type="Button" parent="JoinWindow/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"
flat = true

[node name="Confirm" type="Button" parent="JoinWindow/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Confirm"

[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="close_requested" from="JoinWindow" to="." method="_on_join_window_close_requested"]
[connection signal="pressed" from="JoinWindow/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="JoinWindow/MarginContainer/VBoxContainer/HBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
